# desktop-gremlin

./: .gitignore  desktop_gremlin_settings.example.json  desktop_gremlin_settings.json  main.py  pyproject.toml
desktop_gremlin/: __init__.py  agent_loop.py  app.py  config.py  context_manager.py  history_store.py  image_utils.py  main.py  models.py  ollama_client.py  search_client.py
desktop_gremlin/game/: __init__.py  actions.py  context_assembler.py  errors.py  game_controller.py  initial_state_generator.py  manual_corrections.py  models.py  narrator_service.py  prompt_builder.py  schemas.py  state_applier.py  state_validator.py  turn_processor.py
desktop_gremlin/persistence/: __init__.py  atomic_files.py  errors.py  json_repository.py  repository.py
desktop_gremlin/tools/: python_runner.py  registry.py  schemas.py  web_search.py
desktop_gremlin/ui/: __init__.py  choice_panel.py  developer_inspector.py  game_state_panel.py  image_attachment_bar.py  main_window.py  settings_dialog.py
history/: 20260619-155528-cef61fc6.json  20260619-160044-2a292eee.json  20260619-184529-f0e7d7c4.json  index.json
tests/: test_config.py  test_context_manager.py  test_game_models.py  test_game_state_presentation.py  test_imports.py  test_initial_state_generation.py  test_json_game_repository.py  test_turn_processor.py
