[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-gremlin"
version = "0.1.0"
description = "Local Tkinter chat client for Ollama with tools and future game mode support."
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "pydantic>=2.7",
    "requests>=2.31",
    "pystray>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["desktop_gremlin*"]
